[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/luca-iachini/teststack"
keywords = ["testing", "testcontainers"]
categories = ["testing", "development-tools"]
authors = ["Luca Iachini <luca.iachini89@gmail.com>"]
readme = "README.md"

[workspace]
resolver = "2"
members = ["teststack-macros", "teststack"]

[workspace.dependencies]
teststack-macros = { version = "0.1.0", path = "teststack-macros" }
teststack = { path = "teststack" }
