[package]
name = "example"
description = "examples"
version = "0.1.0"
edition = "2024"


[dependencies]
sqlx = { version = "0.8.5", features = [
	"macros",
	"postgres",
	"mysql",
	"runtime-tokio",
] }
stack = { workspace = true, features = ["postgres", "mysql"] }

[package.metadata.docs.rs]
all-features = true
