[package]
name = "stack"
description = "stack"
version = "0.1.0"
edition = "2024"

[features]
postgres = ["sqlx/postgres", "testcontainers-modules/postgres"]
mysql = ["sqlx/mysql", "testcontainers-modules/mysql"]


[dependencies]
sqlx = { version = "0.8.5", features = ["macros"] }
ctor = "0.4.2"
lazy_static = "1.5.0"
testcontainers = { version = "0.23.3", features = ["watchdog", "blocking"] }
testcontainers-modules = { version = "0.11.6" }
dashmap = { version = "6.1.0" }
macros = { workspace = true }

[package.metadata.docs.rs]
all-features = true
