[package]
name = "teststack-macros"
description = "Test utilities to run testcontainers"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[lib]
proc-macro = true


[dependencies]
syn = { version = "2.0.100", features = ["full"] }
quote = { version = "1.0.24" }

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
sqlx = { version = "0.8.5", features = ["postgres", "mysql", "runtime-tokio"] }
testcontainers-modules = { version = "0.12.0", features = ["rabbitmq"] }
teststack = { workspace = true, features = ["postgres", "mysql"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lapin = "3.0.0"
rstest = { version = "0.25.0" }
