[package]
name = "teststack"
description = "Test utilities to run testcontainers"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = ["macros"]
postgres = ["sqlx/postgres", "testcontainers-modules/postgres"]
mysql = ["sqlx/mysql", "testcontainers-modules/mysql"]
macros = ["dep:teststack-macros"]


[dependencies]
sqlx = { version = "0.8.5", features = ["macros"] }
testcontainers = { version = "0.24.0" }
testcontainers-modules = { version = "0.12.0" }
tokio = { version = "1.44.2", default-features = false, features = [
	"rt",
	"signal",
] }
teststack-macros = { workspace = true, optional = true }
ctor = "0.4.2"
uuid = { version = "1.2.2", features = ["v4"] }
dashmap = { version = "6.1.0" }
once_cell = "1.17.0"

[dev-dependencies]
testcontainers-modules = { version = "0.12.0", features = ["rabbitmq"] }
lapin = "3.0.0"

[package.metadata.docs.rs]
all-features = true
